# montestrike

./: .gitattributes  CMakeLists.txt  LICENSE  QUICK_START.md  README.md  RELEASE_NOTES_v0.2.0.md
cmake/: MonteStrikeConfig.cmake.in  montestrike.pc.in
cuda/: monte_carlo_kernel.cu
docs/: DISCLAIMER.md  USAGE_GUIDE.md
examples/: basic_usage.cpp  basic_usage.py  basic_usage_cpp_output.txt  basic_usage_py_output.txt  performance_benchmark.cpp  performance_benchmark_output.txt  test_python_backends.py
include/montestrike/: aligned_memory.hpp  cpu_analyzer.hpp  device_analyzer.hpp  montestrike.hpp  types.hpp  version.hpp
python/: __init__.py  montestrike_py.cpp
scripts/: verify_installation.py  verify_installation_output.txt
src/: aligned_memory.cpp  cpu_analyzer.cpp  device_analyzer.cpp  memory_manager.cpp  monte_carlo_avx2.cpp  monte_carlo_cpu.cpp  montestrike.cpp  parameter_validator.cpp  version.cpp
test/: generate_test_data.py  generate_test_data_output.txt  test_montestrike_cpp_output.txt
test/cpp/: test_assertions.hpp  test_montestrike_cpp_output.txt  test_pot_calculator.cpp  test_runner.cpp
